# vdata

./: .drone.yml  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .tox.ini  NameUtils.py  README.md  __init__.py  arrays.py  mkdocs.yml  pickled_TDF.h5  pyproject.toml  requirements.txt  requirements_vdata.txt  setup.cfg  temp.py  test.py  test.sh  test2.py  tests.sh  tmp.prof  vdata.py  vulture_whitelist.py
IO/: __init__.py  errors.py  logger.py  read.py
_IO/: errors.py  logger.py  read.py  write.py
_core/: arrays.py  vdata.py  view.py
core/: arrays.py  vdata.py
docs/: how_to.md  index.md  reference.md
docs/about/: license.md
docs/api/: repeating_index.md  timepoint.md
docs/overview/: index.md  tdf.md  timepoint.md
docs/stylesheets/: extra.css
docs/topics/: hdf5.md
tests/: TMP.py  TODO_copy.py  TODO_subset_copy.py  __init__.py  __main__.py  fix_vdata.ipynb  generate_test_data.py  pickled_TDF.h5  test_array_view.py  test_copy.py  test_object_creation.py  test_read.py  test_read_from_GPU.py  test_subsetting.py  test_timepoint_array.py  test_tmp.py  test_write.py  tmp.py
tests/OLD_tests_TDF/: OLD_test_TDF_subsetting.py
tests/ref/: pickled_TDF.h5  pickled_TDF.pkl  pickled_vdata.pkl
tests/test_attribute_proxy/: __init__.py  conftest.py  test_attribute_proxy.py
tests/test_backed_dict/: __init__.py  test_backed_dict.py
tests/test_dataset_proxy/: __init__.py  (+3 more)
vdata/: NameUtils.py  TimePoint.py  VDataFrame.py  __init__.py  _typing.py  array_view.py  name_utils.py  time_point.py  timedict.py  timepoint.py  update.py  utils.py  vdataframe.py
(+229 files in other folders)
