[tool.poetry]
name = "vdata"
version = "0.2.1"
description = "Annotated multivariate observation of timestamped data"
authors = ["Matteo Bouvier <m.bouvier@vidium-solutions.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ch5mpy = { git = "git@git.vidium.solutions:vidium/ch5mpy.git", branch = "master" }
h5dataframe = { git = "git@git.vidium.solutions:vidium/h5dataframe.git", branch = "main" }
tqdm = "^4.66.1"
anndata = "^0.10.4"
scipy = "^1.12.0"
numpy-indexed = "^0.3.7"
scanpy = "^1.9.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-select = ["I"]

[tool.vulture]
paths = ["vdata", "vulture_whitelist.py"]

[tool.mypy]
strict = true
